--- a/index.html
+++ b/index.html
@@ -20,84 +20,65 @@
         <img class="map" src="images/map.png">
 
             <h2>Eastbound</h2>
-            <div class="group">
-                        <span class="bus-numbers">60</span>
-                        <span class="bus-route">Randolph/ Harbor Dr</span>
-                        <span class="arrow-time">&#62;</span>
-                        <div class="frequency">Every 20 min</div>
-                    </li>
-                    </ul>
-                    </div>
+                        <li class="bus-numbers">60</li>
+                        <li class="bus-route">Randolph/ Harbor Dr</li>
+                        <ul class="arrow-time">&#62;</ul>
+                        <ul class="frequency">Every 20 min</ul>
+                      <ul>
 
-                        <span class="bus-numbers">124</span>
-                        <span class="bus-route">Navy Pier</span>
-                        <span class="arrow-time">&#62;</span>
-                        <div class="frequency"> Every 10 min</div>
-                         <hr>
-                    </li>
-                </ul>
-            </div>
+                        <li class="bus-numbers">124</li>
+                        <li class="bus-route">Navy Pier</li>
+                        <ul class="arrow-time">&#62;</ul>
+                        <ul class="frequency"> Every 10 min</ul>
+                    </ul>
 
             <h2>Northbound</h2>
-            <div class="singular">
-                <span class="bus-numbers">151</span>
-                <span class="bus-route">Devon/ Clark</span>
-                <span class="arrow-time">&#62;</span>
-                <div class="frequency">Every 16 min</div>
-              <hr>
-            </div>
+                <li class="bus-numbers">151</li>
+                <li class="bus-route">Devon/ Clark</li>
+                <ul class="arrow-time">&#62;</ul>
+                <ul class="frequency">Every 16 min</ul>
+               </ul>
 
             <h2>Southbound</h2>
-            <div class="group">
-                        <span class="bus-numbers">J14</span>
-                        <span class="bus-route">103rd/ Stony Island</span>
-                        <span class="arrow-time">&#62;</span>
-                        <div class="frequency">Every 15 min</div>
-                    </li>
-                    </ul>
-                    </div>
+                       <li class="bus-numbers">J14</li>
+                       <li class="bus-route">103rd/ Stony Island</li>
+                       <ul class="arrow-time">&#62;</ul>
+                       <ul class="frequency">Every 15 min</ul>
+                     <ul>
 
-                        <span class="bus-numbers">124</span>
-                        <span class="bus-route">Navy Pier</span>
-                        <span class="arrow-time">&#62;</span>
-                        <div class="frequency">Every 10 min</div>
-                    </li>
-                </ul>
-            </div>
+                        <li class="bus-numbers">124</li>
+                        <li class="bus-route">Navy Pier</li>
+                        <ul class="arrow-time">&#62;</ul>
+                        <ul class="frequency">Every 10 min</ul>
+                   </ul>
 
                 <div class=out-of-service>
                   <h3>OUT OF SERVICE</h3>
-                  <div class="singular">
-                                <span class="bus-numbers">4</span>
-                                <span class="bus-route">Cottage Grove</span>
-                                <span class="arrow-time">&#62;</span>
-                                <div class="frequency">Resume 12:10 AM</div>
-                               </li>
-                              </ul>
-                              </div>
+                                <li class="bus-numbers">4</li>
+                                <li class="bus-route">Cottage Grove</li>
+                                <ul class="arrow-time">&#62;</ul>
+                                <ul class="frequency">Resume 12:10 AM</ul>
+                              <ul>
 
-                                <span class="bus-numbers">20</span>
-                                <span class="bus-route">Madison</span>
-                                <span class="arrow-time">&#62;</span>
-                                <div class="frequency">Resume 12:10 AM</div>
-                             </li>
+                                <li class="bus-numbers">20</li>
+                                <li class="bus-route">Madison</li>
+                                <ul class="arrow-time">&#62;</ul>
+                                <ul class="frequency">Resume 12:10 AM</ul>
                             </ul>
-                           </div>
 
-                                <span class="bus-numbers">157</span>
-                                <span class="bus-route">Streeterville/ Taylor</span>
-                                <span class="arrow-time">&#62;</span>
-                                <div class="frequency">Resume 6:00 AM</div>
-                            </li>
+                                <li class="bus-numbers">157</li>
+                                <li class="bus-route">Streeterville/ Taylor</li>
+                                <ul class="arrow-time">&#62;</ul>
+                                <ul class="frequency">Resume 6:00 AM</ul>
                         </ul>
 
                   <div class=reroute>
-                  <h2>REROUTE</h2>
+                  <h5>REROUTE</h5>
                 <div class="singular">
-                    <span class="bus-numbers">6x</span>
-                    <span class="bus-route" id="long-route-name">Jackson Park Express</span>
-                    <span class="arrow-time">&#62;</span>
-                    <div class="frequency">N/A</div>
+                    <li class="bus-numbers">6x</li>
+                    <li class="bus-route" id="long-route-name">Jackson Park Express</li>
+                    <ul class="arrow-time">&#62;      </ul>
+                    <ul class="frequency">N/A</ul>
                      </div>
                     </body>
                   </html>
