--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <h1>Washington & State</h1>
         </div>
         <img class="map" src="images/map.png">
-
+        <div class="line">
             <h2>Eastbound</h2>
+          </div>
                         <li class="bus-numbers">60</li>
                         <li class="bus-route">Randolph/ Harbor Dr</li>
                         <ul class="arrow-time">&#62;</ul>
@@ -32,16 +33,22 @@
                         <ul class="frequency"> Every 10 min</ul>
                           <hr>
                     </ul>
+                  </div>
 
+          <div class="line">
             <h2>Northbound</h2>
+          </div>
                 <li class="bus-numbers">151</li>
                 <li class="bus-route">Devon/ Clark</li>
                 <ul class="arrow-time">&#62;</ul>
                 <ul class="frequency">Every 16 min</ul>
                 <hr>
                </ul>
+          </div>
 
+          <div class="line">
             <h2>Southbound</h2>
+          </div>
                        <li class="bus-numbers">J14</li>
                        <li class="bus-route">103rd/ Stony Island</li>
                        <ul class="arrow-time">&#62;</ul>
@@ -53,9 +60,14 @@
                         <ul class="arrow-time">&#62;</ul>
                         <ul class="frequency">Every 10 min</ul>
                    </ul>
+                 </div>
 
-                <div class=out-of-service>
-                  <h3>OUT OF SERVICE</h3>
+
+                 <div class="out-of-service">
+                   <h3>OUT OF SERVICE</h3>
+                 </div>
+                   <div class="line">
+                   </div>
                                 <li class="bus-numbers">4</li>
                                 <li class="bus-route">Cottage Grove</li>
                                 <ul class="arrow-time">&#62;</ul>
@@ -72,15 +84,19 @@
                                 <li class="bus-route">Streeterville/ Taylor</li>
                                 <ul class="arrow-time">&#62;</ul>
                                 <ul class="frequency">Resume 6:00 AM</ul>
-                        </ul>
 
-                  <div class=reroute>
-                  <h5>REROUTE</h5>
-                <div class="singular">
+                              </div>
+
+
+                      <div class="reroute">
+                        <h3>REROUTE</h3>
+                      </div>
+                      <div class="line">
+                      </div>
                     <li class="bus-numbers">6x</li>
                     <li class="bus-route" id="long-route-name">Jackson Park Express</li>
                     <ul class="arrow-time">&#62;      </ul>
                     <ul class="frequency">N/A</ul>
-                     </div>
+                  </div>
                     </body>
                   </html>
