--- a/index.html
+++ b/index.html
@@ -6,98 +6,91 @@
     <title>BusyBus</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <section class="container">
-      <div class="nav-bar">
         <img class="status-bar" src="images/status bar.png">
         <img class="back-arrow" src="images/Back.png">
+
 
         <div class= "station-title">
         <h1>Washington & State</h1>
         </div>
         <img class="map" src="images/map.png">
-        <div class="line">
             <h2>Eastbound</h2>
           </div>
+                        <ul>
                         <li class="bus-numbers">60</li>
                         <li class="bus-route">Randolph/ Harbor Dr</li>
-                        <ul class="arrow-time">&#62;</ul>
-                        <ul class="frequency">Every 20 min</ul>
+                        <img class="arrow-time" src="images/arrow.png">
+                        <li class="frequency">Every 20 min</li>
                       <ul>
 
                         <li class="bus-numbers">124</li>
                         <li class="bus-route">Navy Pier</li>
-                        <ul class="arrow-time">&#62;</ul>
-                        <ul class="frequency"> Every 10 min</ul>
+                        <img class="arrow-time" src="images/arrow.png">
+                        <li class="frequency"> Every 10 min</li>
                           <hr>
                     </ul>
-                  </div>
 
-          <div class="line">
             <h2>Northbound</h2>
           </div>
+
+                <ul>
                 <li class="bus-numbers">151</li>
                 <li class="bus-route">Devon/ Clark</li>
-                <ul class="arrow-time">&#62;</ul>
-                <ul class="frequency">Every 16 min</ul>
+                <img class="arrow-time" src="images/arrow.png">
+                <li class="frequency">Every 16 min</li>
                 <hr>
                </ul>
-          </div>
 
-          <div class="line">
             <h2>Southbound</h2>
           </div>
+                      <ul>
                        <li class="bus-numbers">J14</li>
                        <li class="bus-route">103rd/ Stony Island</li>
-                       <ul class="arrow-time">&#62;</ul>
-                       <ul class="frequency">Every 15 min</ul>
+                       <img class="arrow-time" src="images/arrow.png">
+                       <li class="frequency">Every 15 min</li>
                      <ul>
 
                         <li class="bus-numbers">124</li>
                         <li class="bus-route">Navy Pier</li>
-                        <ul class="arrow-time">&#62;</ul>
-                        <ul class="frequency">Every 10 min</ul>
+                        <img class="arrow-time" src="images/arrow.png">
+                        <li class="frequency">Every 10 min</li>
                    </ul>
-                 </div>
-
 
                  <div class="out-of-service">
                    <h3>OUT OF SERVICE</h3>
                  </div>
-                   <div class="line">
-                   </div>
+                              <ul>
                                 <li class="bus-numbers">4</li>
                                 <li class="bus-route">Cottage Grove</li>
-                                <ul class="arrow-time">&#62;</ul>
-                                <ul class="frequency">Resume 12:10 AM</ul>
+                                <img class="arrow-time" src="images/arrow.png">
+                                <li class="frequency">Resume 12:10 AM</li>
                               <ul>
 
                                 <li class="bus-numbers">20</li>
                                 <li class="bus-route">Madison</li>
-                                <ul class="arrow-time">&#62;</ul>
-                                <ul class="frequency">Resume 12:10 AM</ul>
-                            </ul>
+                                <img class="arrow-time" src="images/arrow.png">
+                                <li class="frequency">Resume 12:10 AM</li>
+                            <ul>
 
                                 <li class="bus-numbers">157</li>
                                 <li class="bus-route">Streeterville/ Taylor</li>
-                                <ul class="arrow-time">&#62;</ul>
-                                <ul class="frequency">Resume 6:00 AM</ul>
+                                <img class="arrow-time" src="images/arrow.png">
+                                <li class="frequency">Resume 6:00 AM</li>
 
-                              </div>
-
+                              </ul>
 
                       <div class="reroute">
                         <h3>REROUTE</h3>
                       </div>
-                      <div class="line">
-                      </div>
                     <li class="bus-numbers">6x</li>
                     <li class="bus-route" id="long-route-name">Jackson Park Express</li>
-                    <ul class="arrow-time">&#62;      </ul>
-                    <ul class="frequency">N/A</ul>
-                  </div>
+                    <img class="arrow-time" src="images/arrow.png">
+                    <li class="frequency">N/A</li>
+                  </ul>
                     </body>
                   </html>
