--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                               <ul>
                                 <li class="bus-numbers">4</li>
                                 <li class="bus-route">Cottage Grove</li>
-                                <img class="arrow-time" src="images/arrow.png">
+                                <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                                 <li class="frequency">Resume 12:10 AM</li>
                               <ul>
 
