--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <ul>
                         <li class="bus-numbers">60</li>
                         <li class="bus-route">Randolph/ Harbor Dr</li>
-                        <img class="arrow-time" src="images/arrow.png">
+                        <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                         <li class="frequency">Every 20 min</li>
                       <ul>
 
                         <li class="bus-numbers">124</li>
                         <li class="bus-route">Navy Pier</li>
-                        <img class="arrow-time" src="images/arrow.png">
+                        <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                         <li class="frequency"> Every 10 min</li>
                           <hr>
                     </ul>
@@ -41,7 +41,7 @@
                 <ul>
                 <li class="bus-numbers">151</li>
                 <li class="bus-route">Devon/ Clark</li>
-                <img class="arrow-time" src="images/arrow.png">
+                <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                 <li class="frequency">Every 16 min</li>
                 <hr>
                </ul>
@@ -51,13 +51,13 @@
                       <ul>
                        <li class="bus-numbers">J14</li>
                        <li class="bus-route">103rd/ Stony Island</li>
-                       <img class="arrow-time" src="images/arrow.png">
+                       <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                        <li class="frequency">Every 15 min</li>
                      <ul>
 
                         <li class="bus-numbers">124</li>
                         <li class="bus-route">Navy Pier</li>
-                        <img class="arrow-time" src="images/arrow.png">
+                        <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                         <li class="frequency">Every 10 min</li>
                    </ul>
 
@@ -73,13 +73,13 @@
 
                                 <li class="bus-numbers">20</li>
                                 <li class="bus-route">Madison</li>
-                                <img class="arrow-time" src="images/arrow.png">
+                                <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                                 <li class="frequency">Resume 12:10 AM</li>
                             <ul>
 
                                 <li class="bus-numbers">157</li>
                                 <li class="bus-route">Streeterville/ Taylor</li>
-                                <img class="arrow-time" src="images/arrow.png">
+                                <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                                 <li class="frequency">Resume 6:00 AM</li>
 
                               </ul>
@@ -89,7 +89,7 @@
                       </div>
                     <li class="bus-numbers">6x</li>
                     <li class="bus-route" id="long-route-name">Jackson Park Express</li>
-                    <img class="arrow-time" src="images/arrow.png">
+                    <img class="arrow-time" src="images/Arrow Right Grey 1.png">
                     <li class="frequency">N/A</li>
                   </ul>
                     </body>
